# KPI-CV

./: .gitmodules  CMakeLists.txt  Makefile  README.md
source/: image_apply_kernel.cpp  image_conditional_scaling.cpp  image_edge_detect.cpp  image_edge_detect_2.cpp  image_histogram_equalization.cpp  image_open.cpp  image_sharpen.cpp  image_smooth.cpp  main.cpp
